crates/murphy-plugin-macros/tests/ui/fail_non_cop_type.stderr
error[E0277]: the trait bound `NotACop: Cop` is not satisfied
 --> tests/ui/fail_non_cop_type.rs:6:38
  |
6 | murphy_plugin_macros::register_cops!(NotACop);
  |                                      ^^^^^^^ unsatisfied trait bound
  |
help: the trait `Cop` is not implemented for `NotACop`
 --> tests/ui/fail_non_cop_type.rs:4:1
  |
4 | struct NotACop;
  | ^^^^^^^^^^^^^^

error[E0277]: the trait bound `NotACop: Cop` is not satisfied
 --> tests/ui/fail_non_cop_type.rs:6:38
  |
6 | murphy_plugin_macros::register_cops!(NotACop);
  |                                      ^^^^^^^ unsatisfied trait bound
  |
help: the trait `Cop` is not implemented for `NotACop`
 --> tests/ui/fail_non_cop_type.rs:4:1
  |
4 | struct NotACop;
  | ^^^^^^^^^^^^^^
note: required by a bound in `murphy_plugin_api::__internal::build_cop`
 --> $WORKSPACE/crates/murphy-plugin-api/src/lib.rs
  |
  |     pub const fn build_cop<C: Cop>() -> MurphyPluginCopV1 {
  |                               ^^^ required by this bound in `build_cop`
